# rust-pcre2

./: .gitignore  .gitmodules  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
.github/workflows/: ci.yml
pcre2-sys/: Cargo.toml  README.md  build.rs  generate-bindings  update-pcre2
pcre2-sys/src/: bindings.rs  lib.rs  tests.rs
src/: bytes.rs  error.rs  expand.rs  ffi.rs  find_bytes.rs  lib.rs  pool.rs  regex_impl.rs  utf32.rs
