[package]
name = "pcre2"
version = "0.0.1" #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "High level wrapper library for PCRE2."
documentation = "https://docs.rs/pcre2"
homepage = "https://github.com/BurntSushi/rust-pcre2"
repository = "https://github.com/BurntSushi/rust-pcre2"
readme = "README.md"
keywords = ["pcre", "pcre2", "regex", "jit"]
license = "Unlicense/MIT"

[workspace]
members = ["pcre2-sys"]

[dependencies]
libc = "0.2"
pcre2-sys = { version = "0.0.1", path = "pcre2-sys" }
thread_local = "0.3.6"

[build-dependencies]
cc = "1"
pkg-config = "0.3.13"
