[package]
name = "pcre2"
version = "0.2.9"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "High level wrapper library for PCRE2."
documentation = "https://docs.rs/pcre2"
homepage = "https://github.com/BurntSushi/rust-pcre2"
repository = "https://github.com/BurntSushi/rust-pcre2"
readme = "README.md"
keywords = ["pcre", "pcre2", "regex", "jit", "perl"]
license = "Unlicense OR MIT"
categories = ["text-processing"]
edition = "2024"

[workspace]
members = ["pcre2-sys"]

[dependencies]
libc = "0.2.146"
log = "0.4.19"
pcre2-sys = { version = "0.2.9", path = "pcre2-sys" }
