[package]
name = "pcre2-sys"
version = "0.2.2"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Low level bindings to PCRE2."
documentation = "https://docs.rs/pcre2-sys"
homepage = "https://github.com/BurntSushi/rust-pcre2"
repository = "https://github.com/BurntSushi/rust-pcre2"
readme = "README.md"
keywords = ["pcre", "pcre2", "regex", "jit"]
license = "Unlicense/MIT"
categories = ["external-ffi-bindings"]
edition = "2018"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
pkg-config = "0.3.13"
