[package]
name = "pcre2-sys"
version = "0.2.9"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Low level bindings to PCRE2."
documentation = "https://docs.rs/pcre2-sys"
homepage = "https://github.com/BurntSushi/rust-pcre2"
repository = "https://github.com/BurntSushi/rust-pcre2"
readme = "README.md"
keywords = ["pcre", "pcre2", "regex", "jit"]
license = "Unlicense OR MIT"
categories = ["external-ffi-bindings"]
edition = "2021"

[dependencies]
libc = "0.2.146"

[build-dependencies]
cc = { version = "1.0.73", features = ["parallel"] }
pkg-config = "0.3.27"
